@@ -1221,9 +1221,9 @@ void display::draw_unit_on_tile(int x, int y, surface unit_image_override,
 		if(preferences::show_side_colours()) {
 			const char* const selected = selectedHex_ == loc ? "selected-" : "";
 			char buf[50];
-			sprintf(buf,"misc/%sellipse-%d-top.png",selected,team::get_side_colour_index(it->second.side()));
+			snprintf(buf,sizeof(buf),"misc/%sellipse-%d-top.png",selected,team::get_side_colour_index(it->second.side()));
 			ellipse_back.assign(image::get_image(buf));
-			sprintf(buf,"misc/%sellipse-%d-bottom.png",selected,team::get_side_colour_index(it->second.side()));
+			snprintf(buf,sizeof(buf),"misc/%sellipse-%d-bottom.png",selected,team::get_side_colour_index(it->second.side()));
 			ellipse_front.assign(image::get_image(buf));
 		}
 
