@@ -375,7 +375,7 @@ Units cannot be killed by poison alone. The poison will not reduce it below 1 HP
 
 	case SIDE_PLAYING: {
 		char buf[50];
-		sprintf(buf,"terrain/flag-team%d-1.png",team::get_side_colour_index(playing_side));
+		snprintf(buf,sizeof(buf),"terrain/flag-team%d-1.png",team::get_side_colour_index(playing_side));
 
 		u = find_leader(units,playing_side);
 		return report("",buf,u != units.end() ? u->second.description() : "");
